# html-img-embedder

./: Dockerfile  README.md  html_img_embedder.py  pyproject.toml
.github/workflows/: build-container.yml
mnt/: Slides_01.html
tests/: test_html_img_embedder.py
