[project]
name = "html-img-embedder"
version = "0.1.0"
description = "An application to convert extenally reffered images in html page to embedded as base64 encoded images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.scripts]
html_img_embedder = "html_img_embedder:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
